set status if 7 days not accept then make new status order accept by user
